Correction version mobile page d'acceuil apres soutenance

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,17 @@
-  
   @charset "UTF-8";
   @import url("https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap");
   /*@mixin mixin-name {
     css-property: value;
   }*/
+  body {
+    margin: 0;
+    padding: 0;
+  }
+  @media screen and (max-width: 250px) {
+    body {
+     max-width: 230px;
+    }
+  }
   .bouton {
     width: 100%;
     min-width: 250px;
@@ -251,7 +259,7 @@
     margin-top: 25px;
     padding: 20px 0 20px 0;
   }
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 319px) {
     .fonctionnement {
       overflow: visible;
       display: flex;
@@ -284,10 +292,10 @@
     }
   }
   .fonctionnement__titre {
-    padding-left: 25px;
+    padding-left: 45px;
     margin: 0;
     font-weight: bold;
-    font-size: 180%;
+    font-size: 170%;
     margin-right: 45%;
   }
   .fonctionnement__list {
@@ -327,18 +335,17 @@
     background: #9356DC;
     border-radius: 100%;
     color: white;
-    padding: 4px 12px 4px 12px;
-    font-size: 120%;
+    padding: 2px 10px 2px 10px;
+    font-size: 100%;
     z-index: 2;
   }
   .fonctionnement__element__bouton {
     z-index: 1;
-    min-width: 360px;
+    min-width: 290px;
     max-width: 699px;
     height: 100px;
-    margin-left: -18px;
+    margin-left: -15px;
     margin-right: 20px;
-    padding: 25px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -349,7 +356,7 @@
     border: none;
     background-color: #f2f2f2;
     font-weight: bold;
-    font-size: 120%;
+    font-size: 110%;
   }
   .fonctionnement__element__bouton .fas {
     color: grey;
@@ -357,18 +364,18 @@
   }
   .fonctionnement__element__bouton:hover {
     background-color: #e4d5f6;
-    box-shadow: 5px 5px 5px #a6a6a6;
+    box-shadow: 2px 2px 2px #a6a6a6;
   }
   .fonctionnement__element__bouton:hover .fas {
     color: #9356DC;
   }
-  
+
   /*---------- selection du restaurant ----------*/
   .choix {
     margin-top: 20px;
     background-color: #f2f2f2;
     padding: 20px;
-    font-size: 90%;
+    font-size: 80%;
   }
   @media screen and (min-width: 699px) {
     .choix__list {
@@ -384,12 +391,18 @@
     background-color: white;
     border-radius: 20px;
     margin: 20px 0 20px 0;
-    max-width: 380px;
+    max-width: 450px;
   }
-  @media screen and  (max-width: 400px) {
+  @media screen and  (max-width: 499px) {
     .choix__restaurant {
-      overflow: hidden;
-      max-height: 320px;
+      max-height: 300px;
+      max-width: 400px;
+    }
+  }
+  @media screen and  (min-width: 319px) {
+    .choix__restaurant {
+      max-height: 250px;
+      max-width: 350px;
     }
   }
   .choix__restaurant__background {
@@ -400,17 +413,18 @@
   }
   .choix__restaurant__background img {
     width: 100%;
-    min-height: 300px;
+    min-height: 250px;
+    min-width: 300px;
     z-index: 1;
   }
   .new {
     overflow: hidden;
     position: absolute;
-    height: 15px;
-    width: 60px;
-    z-index: 2;
-    margin-left: 265px;
-    margin-top: 25px;
+    height: 10px;
+    width: 52px;
+    z-index: 1;
+    margin-left: 245px;
+    margin-top: 18px;
     padding: 10px;
     background-color: #99E2D0;
     color: #1b6150;
@@ -420,12 +434,16 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 5%;
+    margin: 1.5%;
     color: black;
     font-size: 75%;
   }
+  @media screen and  (min-width: 319px) {
+    .choix__restaurant__designation {
+      margin: 0.4%;
+    }
   .choix__restaurant__designation--text p {
-    font-size: 200%;
+    font-size: 190%;
   }
   
   /*---------- image du restaurant ----------*/
@@ -435,6 +453,13 @@
   .background img {
     margin-top: 1%;
     width: 100%;
+  }
+  @media screen and  (max-width: 699px) {
+    .background img {
+      overflow: hidden;
+      height: 300px;
+      width: 400px;
+    }
   }
   
   /*---------- liste des plats du restaurant ----------*/
